Review patch notes for v1.3.0

--- a/news/v1.3.0-NeedForSpeed.md
+++ b/news/v1.3.0-NeedForSpeed.md
@@ -2,12 +2,13 @@
 
 Hello everyone!
 
-NetExec keeps getting new and good updates. But first of all, a big thank you to all the contributors and people who have contributed ideas, submitted issues and participated on the discord server. In addition to new featues and modules, it also contains many bug fixes and updates.
+Recently, a lot of incredible Pull Requests have been submitted. Over 22 PRs in 2 weeks! This community activity is incredible, so be prepared for a lot of upcoming features, even if not all of them are included in this release.
 
+Therefore, a big thank you to all the contributors in the past months. Of course, also a big thank you to people who have been submitting issues on github and our [Discord Server](https://discord.gg/pjwUTQzg8R). This is very important to improve the stability and to ensure everything is working as expected.
 
 ## NeedForSpeed - NFS 
 
-After a very long time, a new protocol has been added. Yes NFS!. With this enhancement extends NetExec's functionality, detecting NFS Servers, enumarating shares recursively and it provides download and upload files. Thanks to [@termanix](https://github.com/termanix)! who had the idea and development. This protocol was implemented together with [@termanix](https://github.com/termanix), [@Marshall-Hallenbeck](https://x.com/MJHallenbeck) and [@NeffIsBack](https://x.com/al3x\_n3ff).
+After quite some time, a new protocol has been added: NFS! This provides the ability to detect NFS servers, enumerate shares recursively. You can also download and upload files with the commands `--get-file` and `--put-file` respectively. Big thanks to [@termanix](https://github.com/termanix) for implementing this protocol, with the help of [@Marshall-Hallenbeck](https://x.com/MJHallenbeck) and [@NeffIsBack](https://x.com/al3x\_n3ff).
 
 
 ![](https://github.com/user-attachments/assets/214662be-b873-42b1-b515-9f73c28828c3)
@@ -16,31 +17,43 @@ After a very long time, a new protocol has been added. Yes NFS!. With this enhan
 
 ## SCCM LDAP Reconnaissance
 
-LDAP reconnaissance for SCCM. Enumerating SCCM Site-Servers, SCCM Sites, SCCM Management Points, all Users, all Computers ,all Groups. Made by [@NeffIsBack](https://x.com/al3x\_n3ff).
+There has been a lot of recent research into Microsoft's System Center Configuration Manager (SCCM), also known as Microsoft Endpoint Configuration Manager (MECM). Therefore, [@NeffIsBack](https://x.com/al3x\_n3ff) developed a module to detect an SCCM environment in Active directory via LDAP! This will find SCCM Site-Servers, SCCM Sites, SCCM Management Points and Users, Computers or Groups related to SCCM.
 
 ![](https://github.com/user-attachments/assets/8e9f3f14-0f98-453d-8db7-4abe5dc5b7da)
 
 ## coerce_plus Module
 
-The coerce_plus module for all 5 coercion methods (petitpotam, dsfcoerce, ms-even, shadowcoerce, and printerbug). You can now check all these vulnerabilities with a single module, rather than one by one! Made by [@lodos2005](https://github.com/lodos2005).
+The new coerce_plus module combines all 5 coercion methods (PetitPotam, DFSCoerce, MSEven, ShadowCoerce and PrinterBug). You can now check all these vulnerabilities with a single module, rather than one by one! If you want to coerce authentications with one of these techniques, just set a LISTENER ip. Made by [@lodos2005](https://github.com/lodos2005).
 
 ![](https://github.com/user-attachments/assets/fcc9d81f-15a1-4d44-8b3a-f9c534973153)
 
-## Add Output If a Successful Authentication is Via Guest Privileges 
+## Identify Pre-Created Computer Accounts
 
-Unsure about the anonymous authentication? NetExec now shows this in the output if the guest session is active! Thanks to [@Marshall-Hallenbeck](https://x.com/MJHallenbeck) for nice idea.
+Pre-WIndows 2000 computer accounts are valuable targets during engagements, as by default the password is set to the computer name. [@Shad0wC0ntr0ller](https://x.com/Shad0wCntr0ller) developed a module to identify these accounts and save a ccache for accounts, where the password was not changed. If you want to learn more, check out this great article at TrustedSec: [https://trustedsec.com/blog/diving-into-pre-created-computer-accounts](https://trustedsec.com/blog/diving-into-pre-created-computer-accounts)
+
+![](https://github.com/user-attachments/assets/f2423fdb-d649-4fbf-baac-23eac596b4b7)
+
+## Hunting for passwords in PowerShell Histories
+
+The Powershell History can be a goldmine for credentials. If admins forget to clear their history and passwords are typed in the console, they can be easily extracted. Thanks to [@357384n](https://github.com/357384n) we have a new module, which will check the history of all users on the target for keywords that might get you plaintext credentials.
+
+![](https://github.com/user-attachments/assets/5cdc6d16-341b-41d4-9e7d-9b78a363af44)
+
+## Detection for the Guest Session
+
+Unsure about the anonymous authentication? NetExec now has a new flag to detect, if the guest session is active! Thanks to [@Marshall-Hallenbeck](https://x.com/MJHallenbeck) for nice idea.
 
 ![](https://github.com/user-attachments/assets/6d3f7b15-8c0e-432d-8318-bf2d94ef9b83)
 
-## Retrieving networks and Subnest via New SMB Flag Interfaces
+## Retrieving networks and subnets via new SMB Interfaces flag
 
-New SMB feature which is `--interfaces` finds subnets and servers for pivoting. Made by [@Sant0rryu](https://github.com/Sant0rryu).
+The new SMB flag `--interfaces` will enumerate all interfaces on the target. Very useful to find subnets and servers for pivoting! Made by [@Sant0rryu](https://github.com/Sant0rryu).
 
 ![](https://github.com/user-attachments/assets/ceb885df-50e7-410f-971b-01ff107f5f81)
 
-## Enumerating the Drives BitLocker
+## Enumerating BitLocker
 
-New BitLocker module `-M bitlocker` is checking BitLocker status on all drives. Also shis module is available in both WMI and SMB! Made by [@termanix](https://github.com/termanix).
+The new BitLocker module `-M bitlocker` is checking the BitLocker status on all drives. Also this module is available in both WMI and SMB! Made by [@termanix](https://github.com/termanix).
 
 ![](https://github.com/user-attachments/assets/ec6ac04d-5172-4201-aa41-497f8e0bb47e)
 
@@ -52,33 +65,21 @@ This SMB module will dump security questions and answers for all users on the ma
 
 ## Enumerate Hyper-V Hosts
 
-This SMB module based on query a hardcoded key and lookup the hostname of the Hyper-V Host for a target VM. Made by [@joaovarelask](https://x.com/joaovarelas)
+Hyper-V saves the Hostname of the hypervisor in the registry. With this module you can query that information from any target VMs. Made by [@joaovarelask](https://x.com/joaovarelas)
 
 ![](https://github.com/user-attachments/assets/14a12c1d-12a6-4c3b-a6b0-995a16b6f155)
 
-## Identify Pre-Created Computer Accounts
-
-This SMB module identify Pre-Created Computer Accounts, and attempt to save a ccache for each account. This way no need to reset the password. Made by [@Shad0wC0ntr0ller](https://x.com/Shad0wCntr0ller).
-
-![](https://github.com/user-attachments/assets/f2423fdb-d649-4fbf-baac-23eac596b4b7)
-
 ## Checks Regarding Defender AV via WCC Module
 
-This SMB module `-M wcc` enumerates Defender's running/non-running services via the registry. Made by [@jubeaz](https://github.com/jubeaz).
+The WCC module got some new checks regarding Windows Defender settings. E.g. you can check if Defender has exclusions set for specific paths or file extensions. Made by [@jubeaz](https://github.com/jubeaz).
 
 ![](https://github.com/user-attachments/assets/e469059e-3113-4e7d-87c8-47160f3214c7)
 
 ## Smbghost Scanning Module
 
-With this SMB module `-M smbghost`, it can be determined whether the target host has the smbghost vulnerability. Made by [@r4anan](https://x.com/r4vanan).
+With the new SMB module `-M smbghost`, you can check for prerequisits that have to be enabled for the SMBGhost vulnerability. Made by [@r4anan](https://x.com/r4vanan).
 
 ![](https://github.com/user-attachments/assets/8f17c451-76ed-40dd-bc06-2f26b5277126)
-
-## SMB Module to Get the PowerShell History
-
-This module `-M powershell_history` to get the Powershell History of all the users on specified targets. Once get it the module will check some keywords that could contain credentials and display them. Made by [@357384n](https://github.com/357384n).
-
-![](https://github.com/user-attachments/assets/5cdc6d16-341b-41d4-9e7d-9b78a363af44)
 
 ## Outro
 
