--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -19,6 +19,7 @@ NetExec now also provides certificate authentication. Thanks to [@mpgn](https://
 --pem-cert with --pem-key for PEM certificates
 ```
 ![image](https://github.com/user-attachments/assets/c758b9bc-a587-4ced-84ec-453af69ae90c)
+
 ![image](https://github.com/user-attachments/assets/90558bd8-3f81-428e-afb3-97719e7aa231)
 
 # NFS escape to root file system
@@ -27,9 +28,10 @@ With the recently discovered misconfiguration vulnerability of NFS, access to al
 ince it would be too long to explain the details of the vulnerability here, you can read the details in the article on this [link](https://www.hvs-consulting.de/en/nfs-security-identifying-and-exploiting-misconfigurations/). 
 And of course, thanks to [@NeffIsBack](https://x.com/al3x\_n3ff). For doing deep research on this vulnerability and immediately integrating it into the NFS protocol that was recently added to NetExec.
 
-**Note**: With this update, It changed the working of Download and Upload files usage. Don't forget to look at new usage of [flags](nfs-protocol/Download-and-Upload-Files.md)
+**Note**: With this update, It changed the working of Download and Upload files usage. Don't forget to look at new usage of [flags](../nfs-protocol/Download-and-Upload-Files.md)
 
 ![image](https://github.com/user-attachments/assets/f71118eb-a343-4a53-b9e9-9c9decd7a1a4)
+
 ![image](https://github.com/user-attachments/assets/2c2a0f98-3493-42bb-bc26-234836b722f1)
 
 
