--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -10,7 +10,7 @@ As the name suggest, this module can exploit the Backup Operators group to dump 
 
 ![image](https://github.com/user-attachments/assets/bce85c5a-ffb1-4b17-9d02-acd76b4d51cd)
 
-# Certificate authentication
+## Certificate authentication
 
 NetExec now also provides certificate authentication. Thanks to [@mpgn](https://x.com/mpgn_x64) for integrating it into NetExec using [@dirkjanm](https://github.com/dirkjanm) from the repository.
 
@@ -22,7 +22,7 @@ NetExec now also provides certificate authentication. Thanks to [@mpgn](https://
 
 ![image](https://github.com/user-attachments/assets/90558bd8-3f81-428e-afb3-97719e7aa231)
 
-# NFS escape to root file system
+## NFS escape to root file system
 
 With the recently discovered misconfiguration vulnerability of NFS, access to all system files can be provided via the NFS protocol running on Linux systems. 
 ince it would be too long to explain the details of the vulnerability here, you can read the details in the article on this [link](https://www.hvs-consulting.de/en/nfs-security-identifying-and-exploiting-misconfigurations/). 
@@ -34,4 +34,32 @@ And of course, thanks to [@NeffIsBack](https://x.com/al3x\_n3ff). For doing deep
 
 ![image](https://github.com/user-attachments/assets/2c2a0f98-3493-42bb-bc26-234836b722f1)
 
+## SMB Share Dir Option
 
+Yes, now you can list SMB shares directories with new `--dir` SMB flag. Created by [@y0no](https://github.com/y0no).
+
+![image](https://github.com/user-attachments/assets/8ef5d270-0b86-4cf8-acee-f4ae370e59e7)
+
+## SMB Generate Hosts File Option
+
+NetExec now creates host files for machines enumerated over SMB with `--generate-hosts-file <filename>`, making it easier to add/remove /etc/hosts in CTFs and in real life. Thank to [@mpgn](https://x.com/mpgn_x64)
+
+![image](https://github.com/user-attachments/assets/ffe68e1f-ea15-4ecc-86b3-abc059064691)
+
+## LDAP Find Delegation Option
+
+It is now easier to make enums for delegation attacks. With the new LDAP flag `--find-delegation`, delegation query in the target domain can now be controlled. Thanks to [@termanix](https://github.com/termanix) for integrating it from impacket-finddelegetion.
+
+![image](https://github.com/user-attachments/assets/be853996-137e-4ff2-b46a-0956a208e86d)
+
+## An option on ioxidresolver Module to Get Only IPs Different Than Targets
+
+To Do  thank to (@nikaiw)[https://github.com/nikaiw]
+
+![image](https://github.com/user-attachments/assets/9d07dfcc-0cd5-49c9-a06f-dfb642ef743a)
+
+## LDAPS Channel Binding
+
+To Do. Thank to [@NeffIsBack](https://x.com/al3x\_n3ff) 
+
+![image](https://github.com/user-attachments/assets/3dcb9ff0-e0b6-4df5-b643-3bd662182915)
