--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -6,7 +6,7 @@ Thank you to all the contributors in the past months for all PRs. And of course,
 
 # backup_operator Module
 
-As the name suggest, this module can exploit the Backup Operators group to dump the SAM / SECURITY of the DC. And of course it also read the NTDS too. Really big thank to [@mpgn](https://x.com/mpgn_x64) for creating this module.
+As the name suggest, this module `-M backup_operator`can exploit the Backup Operators group to dump the SAM / SECURITY of the DC. And of course it also read the NTDS too. Really big thank to [@mpgn](https://x.com/mpgn_x64) for creating this module.
 
 ![image](https://github.com/user-attachments/assets/bce85c5a-ffb1-4b17-9d02-acd76b4d51cd)
 
@@ -42,9 +42,15 @@ Yes, now you can list SMB shares directories with new `--dir` SMB flag. Created 
 
 ## SMB Generate Hosts File Option
 
-NetExec now creates host files for machines enumerated over SMB with `--generate-hosts-file <filename>`, making it easier to add/remove /etc/hosts in CTFs and in real life. Thank to [@mpgn](https://x.com/mpgn_x64)
+NetExec now creates host files for machines enumerated over SMB with `--generate-hosts-file <filename>`, making it easier to add/remove /etc/hosts in CTFs and in real life. Thanks to [@mpgn](https://x.com/mpgn_x64).
 
 ![image](https://github.com/user-attachments/assets/ffe68e1f-ea15-4ecc-86b3-abc059064691)
+
+## Generating KRB5 File
+
+The new SMB flag `generate-krb5-file <filename>` generates a valid krb5.conf file, similar to `generate-hosts-file`, to enable Kerberos authentication with other tools. Thanks to [@mpgn](https://x.com/mpgn_x64).
+
+![image](https://github.com/user-attachments/assets/e0655094-72fd-42d0-b9b9-8bceef049a8c)
 
 ## LDAP Find Delegation Option
 
@@ -54,12 +60,75 @@ It is now easier to make enums for delegation attacks. With the new LDAP flag `-
 
 ## An option on ioxidresolver Module to Get Only IPs Different Than Targets
 
-To Do  thank to (@nikaiw)[https://github.com/nikaiw]
+To Do  thanks to (@nikaiw)[https://github.com/nikaiw]
 
 ![image](https://github.com/user-attachments/assets/9d07dfcc-0cd5-49c9-a06f-dfb642ef743a)
 
 ## LDAPS Channel Binding
 
-To Do. Thank to [@NeffIsBack](https://x.com/al3x\_n3ff) 
+To Do. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff) 
 
 ![image](https://github.com/user-attachments/assets/3dcb9ff0-e0b6-4df5-b643-3bd662182915)
+
+## BaseDN Flag to LDAP
+
+New LDAP flag provides the ability to manually specify the baseDN for search requests. It finds the objects, if would not be found by the query. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff).
+
+![image](https://github.com/user-attachments/assets/e5c7de03-464c-4fd9-9d8d-8d1206da7f39)
+
+## RID Brute Force on MSSQL
+
+Yes, Now MSSQL protocol provides RID brute forcing! It uses Transact-SQL queries for that. [@Adamkadaban](https://github.com/Adamkadaban).
+
+![image](https://github.com/user-attachments/assets/6ee1749b-650c-420b-aa5c-76009847035f)
+
+## Coercing on MSSQL
+
+After coerce_plus Module, With the joint development of [@Adamkadaban](https://github.com/Adamkadaban) and [@lodos](https://github.com/lodos2005), coerce attacks can now be performed over MSSQL.
+
+![image](https://github.com/user-attachments/assets/272c2b13-53a2-436c-afdc-1a82152ced82)
+
+## Shadow RDP module
+
+That new module provides enabling remotely Shadow RDP which can be used to eavesdrop on a particular RDP session. Thanks to [@Dfte](https://x.com/Defte_).
+
+![image](https://github.com/user-attachments/assets/0cf2a863-baf5-4df5-9113-99ae029abc38)
+
+## Notepad++ Module
+
+With this module, unsaved and thus backed up notepad documents can be dump. It is now important to close tabs while using the App. Thanks to [@Dfte](https://x.com/Defte_).
+
+![image](https://github.com/user-attachments/assets/462b4dc3-1d7e-4fca-9292-04e4e4c39156)
+
+## New Modules on MSSQL
+
+Thanks to [@deathflamingo](https://github.com/deathflamingo), MSSQL protocol has *enum_impersonate*, *enum_logins*, *enum_links*, *exec_on_link*, *link_enable_xp*, *link_xpcmd* modules. With this modules the functionality of MSSQL has increased even more.
+
+## Snipping Tool Module
+
+Now Think twice before copying a screenshot. With this module newer Windows Snipping Tool of screenshots can bu dumped,  even if it saved the file in another directory. Thanks to [@Yeeb1](https://x.com/Yeeb_).
+
+![image](https://github.com/user-attachments/assets/9bf30f52-ee93-4d68-9fc4-17fe8dcd23cb)
+
+## MSSQL Linked Server
+
+If found MSSQL admin user, linked servers config's can bu find with query the login for. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff).
+
+![image](https://github.com/user-attachments/assets/43ad4bcf-0e19-42d2-9cf5-a69f804b4f32)
+
+## Remove Mic Vulnerability
+
+This new module checks if it target vulnerable to CVE-2019-1040. But dont forget that, it can't check for NTLMv1. Thanks to [@XiaoliChan](https://x.com/Memory_before).
+
+![image](https://github.com/user-attachments/assets/e34cacc8-6601-4039-ba8d-b9739fe7fa3a)
+
+## DPAPI Hash
+
+Interested on dumping DPAPI hashes? This module `-M dpapi_hash` extracts of DPAPI "hash" based on the user's protected masterkey. Thanks to [@nikaiw](https://github.com/nikaiw).
+
+![image](https://github.com/user-attachments/assets/af676b4a-aadc-40f5-b8d5-cf1521d35281)
+
+# Outro
+If you want to read about all changes in detail or download the latest standalone binaries check out the github page:
+
+https://github.com/Pennyw0rth/NetExec/releases/tag/v1.4.0
