--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -72,31 +72,31 @@ To Do. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff)
 
 ## BaseDN Flag to LDAP
 
-New LDAP flag provides the ability to manually specify the baseDN for search requests. It finds the objects, if would not be found by the query. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff).
+New LDAP flag `--base-dn` provides the ability to manually specify the baseDN for search requests. It finds the objects, if would not be found by the query. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff).
 
 ![image](https://github.com/user-attachments/assets/e5c7de03-464c-4fd9-9d8d-8d1206da7f39)
 
 ## RID Brute Force on MSSQL
 
-Yes, Now MSSQL protocol provides RID brute forcing! It uses Transact-SQL queries for that. [@Adamkadaban](https://github.com/Adamkadaban).
+Yes, Now MSSQL protocol provides RID brute forcing! `--rid-brute` It uses Transact-SQL queries for that. [@Adamkadaban](https://github.com/Adamkadaban).
 
 ![image](https://github.com/user-attachments/assets/6ee1749b-650c-420b-aa5c-76009847035f)
 
 ## Coercing on MSSQL
 
-After coerce_plus Module, With the joint development of [@Adamkadaban](https://github.com/Adamkadaban) and [@lodos](https://github.com/lodos2005), coerce attacks can now be performed over MSSQL.
+After coerce_plus Module, With the joint development of [@Adamkadaban](https://github.com/Adamkadaban) and [@lodos](https://github.com/lodos2005), coerce attacks can now be performed over MSSQL `-M mssql_coerce `.
 
 ![image](https://github.com/user-attachments/assets/272c2b13-53a2-436c-afdc-1a82152ced82)
 
 ## Shadow RDP module
 
-That new module provides enabling remotely Shadow RDP which can be used to eavesdrop on a particular RDP session. Thanks to [@Dfte](https://x.com/Defte_).
+That new module `-M shadowrdp` provides enabling remotely Shadow RDP which can be used to eavesdrop on a particular RDP session. Thanks to [@Dfte](https://x.com/Defte_).
 
 ![image](https://github.com/user-attachments/assets/0cf2a863-baf5-4df5-9113-99ae029abc38)
 
 ## Notepad++ Module
 
-With this module, unsaved and thus backed up notepad documents can be dump. It is now important to close tabs while using the App. Thanks to [@Dfte](https://x.com/Defte_).
+With this module `-M notepad++`, unsaved and thus backed up notepad documents can be dump. It is now important to close tabs while using the App. Thanks to [@Dfte](https://x.com/Defte_).
 
 ![image](https://github.com/user-attachments/assets/462b4dc3-1d7e-4fca-9292-04e4e4c39156)
 
@@ -106,19 +106,19 @@ Thanks to [@deathflamingo](https://github.com/deathflamingo), MSSQL protocol has
 
 ## Snipping Tool Module
 
-Now Think twice before copying a screenshot. With this module newer Windows Snipping Tool of screenshots can bu dumped,  even if it saved the file in another directory. Thanks to [@Yeeb1](https://x.com/Yeeb_).
+Now Think twice before copying a screenshot. With this module `-M snipped` newer Windows Snipping Tool of screenshots can bu dumped,  even if it saved the file in another directory. Thanks to [@Yeeb1](https://x.com/Yeeb_).
 
 ![image](https://github.com/user-attachments/assets/9bf30f52-ee93-4d68-9fc4-17fe8dcd23cb)
 
 ## MSSQL Linked Server
 
-If found MSSQL admin user, linked servers config's can bu find with query the login for. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff).
+If found MSSQL admin user, linked servers config's can bu find `-M enum_links` with query the login for. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff).
 
 ![image](https://github.com/user-attachments/assets/43ad4bcf-0e19-42d2-9cf5-a69f804b4f32)
 
 ## Remove Mic Vulnerability
 
-This new module checks if it target vulnerable to CVE-2019-1040. But dont forget that, it can't check for NTLMv1. Thanks to [@XiaoliChan](https://x.com/Memory_before).
+This new module `-M remove-mic` checks if it target vulnerable to CVE-2019-1040. But dont forget that, it can't check for NTLMv1. Thanks to [@XiaoliChan](https://x.com/Memory_before).
 
 ![image](https://github.com/user-attachments/assets/e34cacc8-6601-4039-ba8d-b9739fe7fa3a)
 
@@ -128,7 +128,7 @@ Interested on dumping DPAPI hashes? This module `-M dpapi_hash` extracts of DPAP
 
 ![image](https://github.com/user-attachments/assets/af676b4a-aadc-40f5-b8d5-cf1521d35281)
 
-# Outro
+## Outro
 If you want to read about all changes in detail or download the latest standalone binaries check out the github page:
 
-https://github.com/Pennyw0rth/NetExec/releases/tag/v1.4.0
+{% embed url="ttps://github.com/Pennyw0rth/NetExec/releases/tag/v1.4.0" %}
