--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -131,4 +131,4 @@ Interested on dumping DPAPI hashes? This module `-M dpapi_hash` extracts of DPAP
 ## Outro
 If you want to read about all changes in detail or download the latest standalone binaries check out the github page:
 
-{% embed url="ttps://github.com/Pennyw0rth/NetExec/releases/tag/v1.4.0" %}
+{% embed url="https://github.com/Pennyw0rth/NetExec/releases/tag/v1.4.0" %}
