Working on release notes for v1.4.0

--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -1,72 +1,76 @@
 # 🧈 v1.4.0 - SmoothOperator
 
-Hello everyone, after a long time the new version is released with many nice innovations. The new version includes many bug fixed, imporvements, new modules and many more innovations.
+Hello everyone, 
 
-Thank you to all the contributors in the past months for all PRs. And of course, also a big thank you to people who have benn submitting issues. If you want to join our Discord, follow the link [Discord](https://discord.gg/pjwUTQzg8R).
+it has been almost half a year since the last release and a lot of new features have been added since then. Besides the most dominant protocol, SMB, other protocols like NFS, LDAP and MSSQL have seen some love with new modules and improvements.
 
-# backup_operator Module
+Thank you to everyone who contributed over the past months. And of course, a big thank you to everyone who has been reporting issues on GitHub and helping to troubleshoot or taking part in discussions on Discord. If you want to join our Discord, follow the [link](https://discord.gg/pjwUTQzg8R).
 
-As the name suggest, this module `-M backup_operator`can exploit the Backup Operators group to dump the SAM / SECURITY of the DC. And of course it also read the NTDS too. Really big thank to [@mpgn](https://x.com/mpgn_x64) for creating this module.
+In case you didn't know, this wiki is open source too, and you can contribute to it. If you would like to add missing content or improve existing content, please feel free to do so. Any help is much appreciated! You can find the wiki's source code on GitHub [here](https://github.com/Pennyw0rth/NetExec-Wiki).
 
-![image](https://github.com/user-attachments/assets/bce85c5a-ffb1-4b17-9d02-acd76b4d51cd)
+## Backup Operator to Domain Admin
 
-## Certificate authentication
+As the name suggest, the new module `-M backup_operator` can leverage the Backup Operator privileges to dump the SAM / SECURITY of the DC. This ultimately leads to a full compromise of the domain with the dump of the NTDS.dit. Huge thanks to [@mpgn](https://x.com/mpgn_x64) for this module.
 
-NetExec now also provides certificate authentication. Thanks to [@mpgn](https://x.com/mpgn_x64) for integrating it into NetExec using [@dirkjanm](https://github.com/dirkjanm) from the repository.
+![Backup Operator to full domain compromise](https://github.com/user-attachments/assets/bce85c5a-ffb1-4b17-9d02-acd76b4d51cd)
 
-```
+## Certificate Authentication
+
+NetExec now also supports certificate authentication, thanks to the integration of [@dirkjanm](https://x.com/_dirkjan)'s [PKINITtools](https://github.com/dirkjanm/PKINITtools) authentication mechanisms into NetExec, by [@mpgn](https://x.com/mpgn_x64).
+
+```bash
 --pfx-cert/--pfx-base64 with --pfx-pass for PFX certificates
 --pem-cert with --pem-key for PEM certificates
 ```
-![image](https://github.com/user-attachments/assets/c758b9bc-a587-4ced-84ec-453af69ae90c)
+![Certificate authentication using a pfx certificate](https://github.com/user-attachments/assets/c758b9bc-a587-4ced-84ec-453af69ae90c)
 
-![image](https://github.com/user-attachments/assets/90558bd8-3f81-428e-afb3-97719e7aa231)
+![Certificate authentication using a crt and key certificate](https://github.com/user-attachments/assets/90558bd8-3f81-428e-afb3-97719e7aa231)
 
-## NFS escape to root file system
+## NFS Escape to Root File System
 
-With the recently discovered misconfiguration vulnerability of NFS, access to all system files can be provided via the NFS protocol running on Linux systems. 
-ince it would be too long to explain the details of the vulnerability here, you can read the details in the article on this [link](https://www.hvs-consulting.de/en/nfs-security-identifying-and-exploiting-misconfigurations/). 
-And of course, thanks to [@NeffIsBack](https://x.com/al3x\_n3ff). For doing deep research on this vulnerability and immediately integrating it into the NFS protocol that was recently added to NetExec.
+Recent research has shown that the default NFS configuration on Linux systems is often insecure. In short: The NFS server does not check if a requested file is inside the exported directory. This means that if a user has access to the NFS share, they can access any file on the system. In combination with write access, this can lead to a full compromise of the system.
 
-**Note**: With this update, It changed the working of Download and Upload files usage. Don't forget to look at new usage of [flags](../nfs-protocol/Download-and-Upload-Files.md)
+The details of the attack can be found on our wiki page [here](../nfs-protocol/escape-to-root-file-system.md) or on the great blog post by the guys from [HVS Consulting](https://www.hvs-consulting.de/en/blog/nfs-security-identifying-and-exploiting-misconfigurations)
 
-![image](https://github.com/user-attachments/assets/f71118eb-a343-4a53-b9e9-9c9decd7a1a4)
+A full implementation of the attack is now available in NetExec, indicates the vulnerability by a new flag in the host banner. The implementation was done by [@NeffIsBack](https://x.com/al3x\_n3ff).
 
-![image](https://github.com/user-attachments/assets/2c2a0f98-3493-42bb-bc26-234836b722f1)
+**Note**: With this update, the symantics of the file download and upload flags have been changed. Don't forget to check at the new [flag usage](../nfs-protocol/Download-and-Upload-Files.md).
 
-## SMB Share Dir Option
+![Example how to own a debian host with read/write privileges and no_root_squash enabled (the latter is not necessarily needed)](https://github.com/user-attachments/assets/2c2a0f98-3493-42bb-bc26-234836b722f1)
 
-Yes, now you can list SMB shares directories with new `--dir` SMB flag. Created by [@y0no](https://github.com/y0no).
+## Timeroasting the Domain
 
-![image](https://github.com/user-attachments/assets/8ef5d270-0b86-4cf8-acee-f4ae370e59e7)
+The Timeroast attack has been added as a module to NetExec. This attack allows an attacker on the network to request a hashed&salted version of **any** computer account NT hash in the domain **without** the need for authentication. If you would like to know more about the attack, check out [this article](chrome-extension://oemmndcbldboiebfnladdacbdfmadadm/https://www.secura.com/uploads/whitepapers/Secura-WP-Timeroasting-v3.pdf) from [@SecuraBV](https://x.com/SecuraBV). Made by [@Disgame_](https://x.com/Disgame_).
 
-## SMB Generate Hosts File Option
+![Timeroast attack to retriev hashed and salted computer NT hashes](https://github.com/user-attachments/assets/391199264-53d5be8c-4087-45c0-a582-d4cd53416fb6)
 
-NetExec now creates host files for machines enumerated over SMB with `--generate-hosts-file <filename>`, making it easier to add/remove /etc/hosts in CTFs and in real life. Thanks to [@mpgn](https://x.com/mpgn_x64).
+## SMB Share Listing Option
 
-![image](https://github.com/user-attachments/assets/ffe68e1f-ea15-4ecc-86b3-abc059064691)
+You can now list SMB shares directories with new `--dir` SMB flag! Created by [@y0no](https://github.com/y0no).
 
-## Generating KRB5 File
+![Take a look into shares with the new --dir flag](https://github.com/user-attachments/assets/8ef5d270-0b86-4cf8-acee-f4ae370e59e7)
 
-The new SMB flag `generate-krb5-file <filename>` generates a valid krb5.conf file, similar to `generate-hosts-file`, to enable Kerberos authentication with other tools. Thanks to [@mpgn](https://x.com/mpgn_x64).
+## Automatically Generate Hosts File
 
-![image](https://github.com/user-attachments/assets/e0655094-72fd-42d0-b9b9-8bceef049a8c)
+NetExec now creates host files for machines enumerated over SMB with `--generate-hosts-file <filename>`, making it easier to add/remove the /etc/hosts in CTFs and in real life. Made by [@mpgn](https://x.com/mpgn_x64).
 
-## LDAP Find Delegation Option
+![Generate the /etc/hosts file with hosts discovered over SMB](https://github.com/user-attachments/assets/ffe68e1f-ea15-4ecc-86b3-abc059064691)
 
-It is now easier to make enums for delegation attacks. With the new LDAP flag `--find-delegation`, delegation query in the target domain can now be controlled. Thanks to [@termanix](https://github.com/termanix) for integrating it from impacket-finddelegetion.
+## Automatically Generate KRB5 File
 
-![image](https://github.com/user-attachments/assets/be853996-137e-4ff2-b46a-0956a208e86d)
+The new SMB flag `--generate-krb5-file <filename>` generates a valid krb5.conf file, similar to `--generate-hosts-file`, to enable Kerberos authentication with other tools. Made by [@mpgn](https://x.com/mpgn_x64).
 
-## An option on ioxidresolver Module to Get Only IPs Different Than Targets
+![Generate a kerberos config file with the SMB](https://github.com/user-attachments/assets/e0655094-72fd-42d0-b9b9-8bceef049a8c)
 
-To Do  thanks to (@nikaiw)[https://github.com/nikaiw]
+## Enumerate Delegation Configurations in the Domain
 
-![image](https://github.com/user-attachments/assets/9d07dfcc-0cd5-49c9-a06f-dfb642ef743a)
+It is now easier to enumerate missconfigured delegation privileges, thanks to the integration by [@termanix](https://github.com/termanix) of impackets findDelegation.py tool. With the new LDAP flag `--find-delegation` any delegation can be found in the domain, including information about the user/computer object and the type of delegation.
 
-## LDAPS Channel Binding
+![Enumerate delegation configurations in the domain](https://github.com/user-attachments/assets/be853996-137e-4ff2-b46a-0956a208e86d)
 
-To Do. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff) 
+## LDAPS Channel Binding now Supported
+
+The new integration of LDAP Channel Binding is now available in Impacket, which means hardened environments are not a problem anymore. The LDAP protocol automatically picks up the required security options and will work out of the box without user interaction. Thanks to [@NeffIsBack](https://x.com/al3x\_n3ff) who took care of the Pull Request in impacket.
 
 ![image](https://github.com/user-attachments/assets/3dcb9ff0-e0b6-4df5-b643-3bd662182915)
 
