--- a/news/v1.4.0-SmoothOperator.md
+++ b/news/v1.4.0-SmoothOperator.md
@@ -47,7 +47,7 @@ One of NetExec's most prominent features is dumping the local account database (
 
 ## Timeroasting the Domain
 
-The Timeroast attack has been added as a module to NetExec. This attack allows an attacker on the network to request a hashed & salted version of **any** computer account NT hash in the domain **without** the need for authentication. If you would like to know more about the attack, check out [this article](https://chrome-extension/oemmndcbldboiebfnladdacbdfmadadm/https://www.secura.com/uploads/whitepapers/Secura-WP-Timeroasting-v3.pdf) from [@SecuraBV](https://x.com/SecuraBV). Module by [@Disgame\_](https://x.com/Disgame_).
+The Timeroast attack has been added as a module to NetExec. This attack allows an attacker on the network to request a hashed & salted version of **any** computer account NT hash in the domain **without** the need for authentication. If you would like to know more about the attack, check out [this article](https://cybersecurity.bureauveritas.com/uploads/whitepapers/Secura-WP-Timeroasting-v3.pdf) from [@SecuraBV](https://x.com/SecuraBV). Module by [@Disgame\_](https://x.com/Disgame_).
 
 <figure><img src="../.gitbook/assets/391199264-53d5be8c-4087-45c0-a582-d4cd53416fb6 (1).png" alt=""><figcaption><p>Timeroast attack to retrieve hashed and salted computer NT hashes</p></figcaption></figure>
 
